# IndirectMemoryPrefetching

./: .gitignore  Makefile.hello  README.md  run_simpoint_champsim_trace.sh
SimPoint.3.2/analysiscode/: CmdLineParser.cpp  CmdLineParser.d  Datapoint.d  Datapoint.h  FVParser.cpp  Logger.d  Makefile  Simpoint.d  SimpointOptions.d  Utilities.cpp  Utilities.d  Utilities.h
Tyche-Artifact/: Makefile  champsim_config.json  initial_results.csv  nohup.out  results_imp_NAS_cg_A_out_champsim.trace_1423000000.champsim.trace.txt  results_imp_NAS_cg_A_out_champsim.trace_7916000000.champsim.trace.xz.txt  results_imp_NAS_cg_b_out_champsim.trace_193000000000.champsim.trace.xz.txt  results_no_NAS_is_b_out_champsim.trace_16500000000.champsim.trace.xz.txt  results_tyche_NAS_cg_A_out_champsim.trace_7916000000.champsim.trace.xz.txt  results_tyche_NAS_cg_b_out_champsim.trace_193000000000.champsim.trace.xz.txt  results_tyche__--help.txt  results_tyche_crono_dfs_higgs_trace_1600000000.champsim.trace.xz.txt  run_experiments.py
Tyche-Artifact/cg-results/: parse_results.py  plot_results.py  results.csv  results_ipcp_l1d_NAS_cg_A_out_champsim.trace_7916000000.champsim.trace.xz.txt  results_no_NAS_cg_A_out_champsim.trace_7916000000.champsim.trace.xz.txt
prodigy_compiler_support_public/: CMakeCache.txt  Makefile  cmake_install.cmake
prodigy_compiler_support_public/runtime/qemu/: CMakeLists.txt  Makefile  README.md  build_loongarch.sh  cmake_install.cmake  libprefetcher_qemu_rt.so.loongarch  prefetcher_qemu_rt.cpp  prefetcher_qemu_rt.h
qemu_plugins/: champsim_la_with_reg_simpoint.cc
(+154 files in other folders)
